examples/test/testpolicy1103.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1103
  namespace: namespace177
spec:
  podSelector:
    matchLabels:
      key22: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value46
      podSelector:
        matchLabels:
          key13: value31
          key6: value31
          key38: value1
